objects/DemoSetupStatus__c.object
<CustomObject>
    <description>The run-time portion of Demo Setup, where status and error messages are stored.  This object is used in conjunction with the Demo Setup Step custom metadata type</description>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <description>In the case of an error, the contents of the error message are stored here for troubleshooting purposes and display to the user.  To fully reset a step, this field must be cleared.</description>
        <inlineHelpText>In the case of an error, the contents of the error message are stored here for troubleshooting purposes and display to the user.  To fully reset a step, this field must be cleared.</inlineHelpText>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>StepNumber__c</fullName>
        <description>The unique identifier that matches up the metadata step number with the same value.</description>
        <externalId>true</externalId>
        <inlineHelpText>The unique identifier that matches up the metadata step number with the same value.</inlineHelpText>
        <label>Step Number</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>StepStatus__c</fullName>
        <defaultValue>&quot;Not Started&quot;</defaultValue>
        <description>The current status of the step.</description>
        <inlineHelpText>The current status of the step.</inlineHelpText>
        <label>Step Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Running</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Skipped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Demo Setup Status</label>
    <nameField>
        <displayFormat>DSS-{000000}</displayFormat>
        <label>DSS#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demo Setup Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>